# miceamaze

./: .gitignore  LICENSE  README.md  make-packages.sh
SOIL/: SOIL.h
datasrc/: README.txt  makechars.cpp
js-project/: Makefile  src
js-project/SOIL/: SOIL.c
linux-project/: .cproject  .project  ChangeLog.txt  LICENSE.txt  Makefile  README.txt  miceamaze.desktop
linux-project-simple-nodeps/: Makefile  README.txt  SOIL  data
linux-project-simple-nodeps/quesoglc-0.7.2/: AUTHORS  ChangeLog  INSTALL  INSTALL.win  Makefile  Makefile.am  Makefile.in  QuesoGLC.sln  README  THANKS  aclocal.m4  config.status  configure  configure.in  libtool  makefile.mgw  quesoglc.pc  quesoglc.pc.in
linux-project-simple-nodeps/quesoglc-0.7.2/database/: buildDB.py
linux-project-simple-nodeps/quesoglc-0.7.2/docs/: Doxyfile  Image1.eps  Image2.eps  Image3.eps  Image4.eps  body_comparison.eps  mainpage.dox  measure.eps  qfooter.html  qheader.html  quesoglc.css  screenshot.eps  tutorial.eps  tutorial2.eps  tutorial2_wrong.eps
linux-project-simple-nodeps/quesoglc-0.7.2/examples/: Makefile  Makefile.am  Makefile.in  demo.c  demo.vcproj  glcdemo.c  glcdemo.vcproj  glclogo.c  glclogo.vcproj  tutorial.c  tutorial.vcproj  tutorial2.c  tutorial2.vcproj  unicode.c  unicode.vcproj
linux-project-simple-nodeps/quesoglc-0.7.2/include/: Makefile  Makefile.am  Makefile.in  internal.h  qglc_config.h  qglc_config.hin  stamp-h1
linux-project-simple-nodeps/quesoglc-0.7.2/include/GL/: glc.h  glew.h  glxew.h  wglew.h
linux-project-simple-nodeps/quesoglc-0.7.2/src/: context.c  except.c  except.h  font.c  glew.c  global.c  master.c  measure.c  misc.c  oarray.c  oarray.h  ocharmap.c  ocharmap.h  ocontext.c  ocontext.h  ofacedesc.c  ofacedesc.h  ofont.c  ofont.h  oglyph.c  oglyph.h  omaster.c  omaster.h  render.c  scalable.c  texture.c  texture.h  transform.c  unicode.c
linux-project-simple-nodeps/quesoglc-0.7.2/src/fribidi/: fribidi.c  fribidi.h  fribidi_char_type.c  fribidi_mirroring.c  fribidi_tab_char_type_9.i  fribidi_types.c  fribidi_types.h  fribidi_unicode.h
linux-project-simple-nodeps/quesoglc-0.7.2/tests/: Makefile  Makefile.am  Makefile.in  test1.c  test1.vcproj  test10.c  test10.vcproj  test11.1.vcproj  test11.2.vcproj  test11.3.vcproj  test11.4.vcproj  test11.5.vcproj  test11.6.vcproj  test11.7.vcproj  test11.c  test12.c  test12.vcproj  test13.c  test14.c  test15.c  test16.c  test17.c  test2.c  test3.c  test4.c  test4.vcproj  test5.c  test5.vcproj  test6.c  test6.vcproj  test7.c  test7.vcproj  test8.c  test8.vcproj  test9.1.vcproj  test9.2.vcproj  test9.3.vcproj  test9.4.vcproj  test9.5.vcproj  test9.6.vcproj  (+11 more)
linux-project-simple-nodeps/quesoglc-0.7.2/tests/.deps/: test4.Po
linux-project/data/: MiceAmaze.txt  mazes  music  sound
linux-project/man/: miceamaze.6
oldsrc/: RenderText.cpp  RenderText.h
packaging/: makeit.sh  prepare.sh
packaging/debian/: changelog  control  copyright  menu  miceamaze.dirs  rules  watch
packaging/debian/patches/: reproducible-build.patch
project/: .cproject  .project  ChangeLog.txt  LICENSE.txt  MICEAMAZE_LICENSE.txt  Prepare Installer Files.bat  README.txt  installer_script.iss  makeZIP.bat  makeres.bat  miceamaze.dev  miceamaze_private.res  postbuild.bat  windows.res
project/rundir/data/mazes/: maze01.txt  maze02.txt  maze03.txt  maze04.txt  maze05.txt  maze06.txt  maze07.txt  maze08.txt  maze09.txt  maze10.txt  maze11.txt  maze12.txt  maze13.txt
project/rundir/data/music/: LICENSE.txt
project/src/: AI.cpp  AI.h  AIVertex.h  AIVertexHeap.cpp  AIVertexHeap.h  Animal.cpp  Animal.h  AnimalWithDistance.h  Arrow.cpp  Arrow.h  Button.cpp  Button.h  Color.h  Config.cpp  Config.h  Cursor.cpp  Cursor.h  FPS.cpp  FPS.h  FloatXY.h  Functions.cpp  Functions.h  Game.cpp  Game.h  House.cpp  House.h  HowToPlay.cpp  HowToPlay.h  Images.cpp  Images.h  IntXY.h  Maze.cpp  Maze.h  MenuAbout.cpp  MenuAbout.h  MenuMain.cpp  MenuMain.h  MenuOptions.cpp  MenuOptions.h  MenuPlayers.cpp  (+20 more)
website/: LICENSE.txt  index.html  maze1.txt  style.css
website/source-packages/debian/: miceamaze_1.4.1-1.dsc  miceamaze_1.4.1-1_amd64.build  miceamaze_1.4.1-1_amd64.changes  miceamaze_1.4.1-1_amd64.deb  miceamaze_1.6.1-1.dsc  miceamaze_1.6.1-1_amd64.build  miceamaze_1.6.1-1_amd64.changes  miceamaze_1.6.1-1_amd64.deb  miceamaze_1.7.1-3.dsc  miceamaze_1.7.1-3_amd64.build  miceamaze_1.7.1-3_amd64.changes  miceamaze_1.7.1-3_amd64.deb  miceamaze_1.8-1.dsc  miceamaze_1.8-1_amd64.build  miceamaze_1.8-1_amd64.changes  miceamaze_1.8-1_amd64.deb  miceamaze_1.8-2.dsc  miceamaze_1.8-2_amd64.build  miceamaze_1.8-2_amd64.changes  miceamaze_1.8-2_amd64.deb
